<resources>
    <string name="app_name">TabelLayout</string>
    <string name="headerNo">No</string>
    <string name="headerNama">Nama</string>
    <string name="headerNIM">NIM</string>
    <string name="headerEmail">Email</string>
    <string name="headerHandphone">No Hanphone</string>
    <string name="noText1">1</string>
    <string name="namaText1">Adi</string>
    <string name="nimText1">084957</string>
    <string name="emailText1">adi@gmail.com</string>
    <string name="handphoneText1">081234537856</string>
    <string name="noText2">2</string>
    <string name="namaText2">Taki</string>
    <string name="nimText2">084929</string>
    <string name="emailText2">taki@gmail.com</string>
    <string name="handphoneText2">082948576421</string>
    <string name="noText3">3</string>
    <string name="namaText3">Lala</string>
    <string name="nimText3">084992</string>
    <string name="emailText3">lala@gmail.com</string>
    <string name="handphoneText3">082876783921</string>
    <string name="noText4">4</string>
    <string name="namaText4">Ali</string>
    <string name="nimText4">084998</string>
    <string name="emailText4">ali@gmail.com</string>
    <string name="handphoneText4">082157894378</string>
    <string name="noText5">5</string>
    <string name="namaText5">Jack</string>
    <string name="nimText5">0849547</string>
    <string name="emailText5">jack@gmail.com</string>
    <string name="handphoneText5">082984785984</string>
    <string name="noText6">6</string>
    <string name="namaText6">Roy</string>
    <string name="nimText6">084934</string>
    <string name="emailText6">roy@gmail.com</string>
    <string name="handphoneText6">082157845748</string>
    <string name="noText7">7</string>
    <string name="namaText7">Kane</string>
    <string name="nimText7">084928</string>
    <string name="emailText7">kane@gmail.com</string>
    <string name="handphoneText7">082157845782</string>
    <string name="noText8">8</string>
    <string name="namaText8">Pony</string>
    <string name="nimText8">084929</string>
    <string name="emailText8">pony@gmail.com</string>
    <string name="handphoneText8">085748579234</string>
    <string name="noText9">9</string>
    <string name="namaText9">Wes</string>
    <string name="nimText9">084947</string>
    <string name="emailText9">wes@gmail.com</string>
    <string name="handphoneText9">082157894728</string>
    <string name="noText10">10</string>
    <string name="namaText10">Zen</string>
    <string name="nimText10">084974</string>
    <string name="emailText10">zen@gmail.com</string>
    <string name="handphoneText10">082157842938</string>
</resources>